Fix yamlRestTest re-homing and drop dead code
The scan step could not attribute a concrete subclass compiled into a
yamlRestTest source set. dispositionsOf only reported a disposition for
kinds in BYTECODE_ENRICHED, so yamlRestTest outputs were ASM-scanned
but unclaimed: 115 projects had a scanned yamlRestTest output and none
had a disposition. Expansion found those subclasses and then had
nowhere to put them, so they came out as subclass-outside-target-output
skips.

A ref naming AbstractXPackRestTest produced five skips and no runnable
work at all, though all five are real tests their projects'
yamlRestTest tasks run. The gate was the wrong predicate: whether a
source set can be expanded is a different question from whether it can
own a subclass the scan found there, and only the second one is asked
here.

Also carry expandedFrom on expansion-produced skips. Those five entries
were attributed to the base's project with nothing recording where they
came from, which reads as a class nobody touched appearing in a project
that cannot run it.

Verified end to end on the repo: the same ref now yields five run
entries under their own yamlRestTest tasks, zero
subclass-outside-target-output, and deduplicateYamlRunners collapses
them to one command per project. The four javaRestTest re-homings are
unchanged.

Dead code removed, all confirmed to have no callers:
- FlakinessPlan.buildFailed, reachable only from a test. A failed plan
  is written by shell in buildkite.ts, because compilation failing is
  precisely when no Gradle task can run.
- PlanBuilder.build's five-arg overload, used only by tests, whose
  defaulted lookup no fixture ever invoked.
- KIND_ORDER and KIND_LABELS in domain.ts, orphaned when Java took over
  batch-command generation. Only KIND_KEYS still has a TS consumer.
- The workspace pre-cleaning in buildkite.ts. Agents are ephemeral, and
  local.ts already clears the targets dir for the one workspace that is
  not.

flakiness-skipped.json is now written u